# CompilerAndTools

./: .gitignore  README.md
CompileAndBuildTools/: CMakeLists.txt
CompileAndBuildTools/Compiler/: CMakeLists.txt  CModuleCode.cpp  CModuleCode.h  CodeSerializationFactory.cpp  CompilationBlackbox.cpp  DECLARATIONNode.cpp  ExecutionBlackbox.h  ExecutionStrategyConcrete_MPI.cpp  ExecutionStrategyConcrete_MPI.h  Expression.cpp  FOREachNode.h  Includes.h  InputTypes.cpp  InputTypes.h  MainInputParser.cpp  Profiler.cpp  Profiler.h  Redefinitions.h  Streams.h  calc3.cpp  calc3_utils.cpp  lex.yy.c  main.cpp
CompileAndBuildTools/Compiler/temp/: PRIMETEST  READ
CompileAndBuildTools/GenerateApp/: CMakeLists.txt
CompileAndBuildTools/GenerateApp/GenerateApp/: CMakeLists.txt  main.cpp
CompileAndBuildTools/ModulesAnalyzer/: CMakeLists.txt
CompileAndBuildTools/ModulesAnalyzer/ModulesAnalyzer/: CMakeLists.txt  ModulesAnalyzer.vcxproj  ParserProcessesVector.cpp  main.cpp
CompileAndBuildTools/ScedulersDistributed/: CMakeLists.txt  SchedulerCODef.h  SchedulerCODef_Master.cpp  SchedulerUtils.h  stdafx.h  targetver.h
CompileAndBuildTools/linux_bin/: AgapiaProgram  Compiler  Def.txt  GenerateApp  ModulesAnalyzer  agapia.txt
CompileAndBuildTools/linux_bin/temp/: AgapiaToCCode.cpp  PRIMETEST  agapia_transf.txt  generatedModules.txt
Examples/Encrypting Messages Using Permutations/: Def.txt  MainInput.txt  agapia.txt  execution.bat  includes.h  permutationParallel.txt
Examples/Encrypting Messages Using Permutations/Decryption code/: Def.txt  agapia.txt  clearText.txt  encryptedTextParallel.txt  execution.bat  invers.cpp
Examples/Encrypting Messages Using Permutations/Decryption code/temp/: AgapiaToCCode.cpp  CEVA  MAIN  SCRIEREI  agapia_transf.txt
Examples/Encrypting Messages Using Permutations/temp/: ALTCEVA  AgapiaToCCode.cpp  BBALTCEVA  Includes.h  MASTER  agapia_transf.txt
Manual/: 1.Installation, Usage and Debugging.docx
